# t2-upower

./: .gitignore  NEWS  README.md  build-arch-linux.sh  build-deb.sh  build-rpm.sh  meson.build  meson_options.txt
contrib/: build-arch-linux.sh  build-rpm.sh
contrib/packaging/arch/: PKGBUILD
dbus/: meson.build  org.freedesktop.UPower.Device.xml  org.freedesktop.UPower.KbdBacklight.xml
etc/: meson.build
libupower-glib/: up-client.c  up-client.h  up-device.c
pkg/arch-linux/: PKGBUILD
pkg/arch-linux/t2-upower-1.91.2/: .gitlab-ci.yml
pkg/arch-linux/t2-upower-1.91.2/contrib/: build-arch-linux.sh  build-deb.sh  tartan.sh
pkg/arch-linux/t2-upower-1.91.2/doc/man/: upower.xml
pkg/arch-linux/t2-upower-1.91.2/etc/UPower.conf.d/: meson.build
pkg/arch-linux/t2-upower-1.91.2/libupower-glib/: meson.build
pkg/arch-linux/t2-upower-1.91.2/policy/: org.freedesktop.upower.rules
pkg/arch-linux/t2-upower-1.91.2/rules/: 60-upower-battery.rules
pkg/arch-linux/t2-upower-1.91.2/src/: meson.build  up-device-battery.c  up-device-kbd-backlight.c  up-device.c  up-history.h  up-kbd-backlight.c  up-self-test.c
pkg/arch-linux/t2-upower-1.91.2/src/linux/: integration-test.py  up-device-supply-battery.c  up-device-supply.c
policy/: meson.build  org.freedesktop.upower.policy.in
src/: meson.build  up-config.c  up-daemon.c  up-device-battery.h  up-history.c
src/linux/: integration-test.py  up-backend.c  up-device-supply-battery.c  up-enumerator-udev.c  up-kbd-backlight-led.c
tools/: up-tool.c
